OpenHealth/force-app/main/default/force-app/main/default/objects/LabResult__c/LabResult__c.object-meta.xml
<CustomObject>
    <label>Lab Result</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>