OpenHealth/force-app/main/default/force-app/main/default/objects/LabResult__c/MedicalRecord__c.field-meta.xml
<CustomField>
    <fullName>MedicalRecord__c</fullName>
    <label>MedicalRecord</label>
    <type>Lookup</type>
    <referenceTo>MedicalRecord__c</referenceTo>
    <relationshipName>LabResultMedicalRecord</relationshipName>
</CustomField>