OpenHealth/force-app/main/default/force-app/main/default/objects/LabResult__c/ReferenceRange__c.field-meta.xml
<CustomField>
    <fullName>ReferenceRange__c</fullName>
    <label>ReferenceRange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>