OpenHealth/force-app/main/default/force-app/main/default/objects/LabResult__c/ResultValue__c.field-meta.xml
<CustomField>
    <fullName>ResultValue__c</fullName>
    <label>ResultValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>