OpenHealth/force-app/main/default/force-app/main/default/objects/LabResult__c/TestDate__c.field-meta.xml
<CustomField>
    <fullName>TestDate__c</fullName>
    <label>TestDate</label>
    <type>Date</type>
</CustomField>