OpenHealth/force-app/main/default/force-app/main/default/objects/LabResult__c/TestName__c.field-meta.xml
<CustomField>
    <fullName>TestName__c</fullName>
    <label>TestName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>